# abstract_data_types

./: CMakeLists.txt  example_func.h  main.cpp
ADT/: deque.h  queue.h  segmented_deque.h  stack.h
UI/: assign_UI.h  concat_UI.h  creation_UI.h  deque_UI.h  main_menu_UI.h  map_where_reduce_UI.h  queue_UI.h  save_or_not_UI.h  segmented_deque_UI.h  stack_UI.h
data_org/: doubly_linked_list.h  dynamic_array.h  linked_list.h  segmented_dynamic_array.h
exceptions/: exceptions.h
my_types/: complex_numbers.h
sequence/: array_sequence.h  doubly_list_sequence.h  list_sequence.h  segmented_array_sequence.h  sequence.h  supported_typeinfo.h
tests/: CMakeLists.txt  tests_exceptions.h  tests_runner.cpp
tests/ADT/: tests_deque_immutable.h  tests_deque_mutable.h  tests_queue_immutable.h  tests_queue_mutable.h  tests_segmented_deque_immutable.h  tests_segmented_deque_mutable.h  tests_stack_immutable.h  tests_stack_mutable.h
tests/data_org/: tests_doubly_linked_list.h  tests_dynamic_array.h  tests_linked_list.h  tests_segmented_dynamic_array.h
tests/sequence/: tests_array_sequence_immutable.h  tests_array_sequence_mutable.h  tests_doubly_list_sequence_immutable.h  tests_doubly_list_sequence_mutable.h  tests_list_sequence_immutable.h  tests_list_sequence_mutable.h  tests_segmented_array_sequence_immutable.h  tests_segmented_array_sequence_mutable.h
